# dinnerplan

./: .gitignore  README.md  dinnerplan.py  pyproject.toml
