[tool.poetry]
name = "dinnerplan"
version = "0.1.0"
description = ""
authors = ["Asbjørn Ørnemark Lægdsmand <acerbjorn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
